fixed gap

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
 .grid {
     display: grid;
     grid-template-columns: repeat(9, 40px);
-    grid-gap: 2px;
+    grid-gap: 10px;
     margin-bottom: 20px;
 }
 
